setup basic example

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,7 @@
 <h2 id="title">Welcome to Ember</h2>
 
+{{#resize-sensor onResize="resize"}}
+  <div class="resize-area"></div>
+{{/resize-sensor}}
+
 {{outlet}}
