--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -3,9 +3,19 @@
   border: 1px solid #222;
 }
 
-.rezisable-widget-container {
-  display: inline-block;
+.resize-sensor-container {
+  width: 80%;
+  height: 80vh;
+  background: red;
+  display: inline;
 }
+
+/*.rezisable-widget-container {
+  display: inline;
+  background: red;
+  width: 80%;
+  height: 50vh;
+}*/
 
 #rezisable-widget { 
   width: 200px; 
