--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -1,24 +1,3 @@
-.resize-area {
-  padding: 16px;
-  border: 1px solid #222;
-}
-
 .resize-sensor-container {
-  width: 80%;
-  height: 80vh;
-  background: red;
-  display: inline;
-}
-
-/*.rezisable-widget-container {
-  display: inline;
-  background: red;
-  width: 80%;
-  height: 50vh;
-}*/
-
-#rezisable-widget { 
-  width: 200px; 
-  height: 150px; 
-  padding: 5px; 
+  height: 100%;
 }
